<resources>
    <string name="app_name">pokedex-android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pokedex">PokeDex</string>
    <string name="poke_ball">Poke ball\'s</string>
    <string name="berry">Berry\'s</string>
    <string name="games">Games</string>
    <string name="pokemon_number">#004</string>
    <string name="species">Species</string>
    <string name="label_dragon">Dragon</string>
    <string name="label_pokemon_name">Dratini</string>
    <string name="label_pokemon_number">#147</string>
    <string name="info_label">Info</string>
    <string name="image_description">Pokemon image</string>
    <string name="label_pokemon_height">Height</string>
    <string name="label_pokemon_weight">Weight</string>
    <string name="label_pokemon_genders">Genders</string>
    <string name="label_percentage">50.0</string>
    <string name="label_height_value">45m</string>
    <string name="label_weight_value">5.4</string>
    <string name="pokedex_android">Pokedex Android</string>
    <string name="female_symbol">&#x2640;</string>
    <string name="male_symbol">&#x2642;</string>
</resources>