<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/poke_dex"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pokedex" />
        <item
            android:id="@+id/poke_balls"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/poke_ball" />
        <item
            android:id="@+id/berry"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/berry" />
        <item
            android:id="@+id/games"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/games" />
    </group>
</menu>