<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_header"
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:background="@drawable/curved_shape"
        android:backgroundTint="@color/dragon_light_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/label_pokemon_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/v_header"
        app:layout_constraintTop_toTopOf="@id/v_header" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:useMaterialThemeColors="false"
        android:button="@drawable/selector_favorite_pokemon"
        app:layout_constraintBottom_toBottomOf="@id/tv_pokemon_number"
        app:layout_constraintEnd_toStartOf="@id/tv_pokemon_number"
        app:layout_constraintTop_toTopOf="@id/tv_pokemon_number" />

    <TextView
        android:id="@+id/tv_pokemon_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/label_pokemon_number"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/v_header"
        app:layout_constraintTop_toTopOf="@id/v_header" />

    <ImageView
        android:id="@+id/iv_pokemon"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/dratini"
        app:layout_constraintBottom_toBottomOf="@id/v_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_pokemon_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/format_pokemon_type"
        android:backgroundTint="@color/dragon_color"
        android:paddingStart="38dp"
        android:paddingTop="4dp"
        android:paddingEnd="38dp"
        android:paddingBottom="4dp"
        android:text="@string/label_dragon"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_pokemon_second_type"
        app:layout_constraintStart_toStartOf="@id/iv_pokemon"
        app:layout_constraintTop_toBottomOf="@id/iv_pokemon" />

    <TextView
        android:id="@+id/tv_pokemon_second_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/format_pokemon_type"
        android:backgroundTint="@color/dragon_color"
        android:paddingStart="38dp"
        android:paddingTop="4dp"
        android:paddingEnd="38dp"
        android:paddingBottom="4dp"
        android:text="@string/label_dragon"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/iv_pokemon"
        app:layout_constraintStart_toEndOf="@id/tv_pokemon_type"
        app:layout_constraintTop_toBottomOf="@id/iv_pokemon" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_label"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:text="@string/species"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/tv_species_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_species_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pokemon_name"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_species"
                app:layout_constraintStart_toStartOf="@id/tv_height_value" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_pokemon_height"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_species"
                app:layout_constraintTop_toBottomOf="@id/tv_species" />

            <TextView
                android:id="@+id/tv_height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_height_value"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_height"
                app:layout_constraintStart_toStartOf="@id/tv_species_value" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_pokemon_weight"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_height"
                app:layout_constraintTop_toBottomOf="@id/tv_height" />

            <TextView
                android:id="@+id/tv_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weight_value"
                app:layout_constraintBottom_toBottomOf="@id/tv_weight"
                app:layout_constraintStart_toStartOf="@id/tv_height_value" />

            <TextView
                android:id="@+id/tv_genders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_pokemon_genders"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_weight"
                app:layout_constraintTop_toBottomOf="@id/tv_weight" />

            <TextView
                android:id="@+id/tv_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_percentage"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_genders"
                app:layout_constraintStart_toStartOf="@id/tv_weight_value" />

            <TextView
                android:id="@+id/tv_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/label_percentage"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_genders"
                app:layout_constraintStart_toEndOf="@id/tv_male" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>