<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:clickable="true"
    app:cardCornerRadius="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cl_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FF8440">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pokemon_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/mtv_number"
                app:layout_constraintEnd_toStartOf="@id/mtv_number"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mtv_number" />

            <TextView
                android:id="@+id/tv_pokemon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/format_pokemon_type"
                android:backgroundTint="@color/component_transparent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/label_dragon"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mtv_name" />

            <TextView
                android:id="@+id/tv_pokemon_second_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/format_pokemon_type"
                android:backgroundTint="@color/component_transparent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/label_dragon"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pokemon_type" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/pokemon_number"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mtv_name"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:src="@drawable/pokeball"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_pokemon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/charmander"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/iv_shiny_pokemon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/dratini"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</com.google.android.material.card.MaterialCardView>